ad styling and fix spacing

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -7,6 +7,7 @@ body{
     text-align: center;
     bottom: 1em;
     right: 1em;
+    border-radius: 20px;
 }
 
 .dark-mode{
@@ -23,6 +24,14 @@ body{
     padding-bottom: 4em;
 }
 
+.ad-container{
+    padding-bottom: 4em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
 #login-form{
     margin: auto;
     width: 70%;
@@ -34,5 +43,20 @@ body{
 
 h1 {
     text-align: center;
+    width: 100%;
 }
+
+.img{
+    border-radius: 25px;
+    padding-bottom: 1em;
+}
+
+.shadow{
+    box-shadow: 10px 7px slategray;
+}
+
+.navbar{
+    color: #c5dcee;
+}
+
 
